# OmniGatePro

./: .env.example  .gitignore  404.html  DIFFERENTIATION.md  Dockerfile  README.md  USAGE.md  __init__.py  __main__.py  artfish  artfish.ps1  cli.py  demo_api_engine.py  demo_art_pro.py  demo_async.py  demo_edu_scenarios.py  demo_feishu.py  demo_omni_pro.py  demo_plugin.py  docker-compose.pro.yml  docker-compose.yml  edusense.ps1  index.html  install-completion.sh  install.sh  install_win.ps1  main.py  mcp_server.py  omni  omni.bat  omni.ps1  prove_it.py  pyproject.toml  requirements.txt  run_server.ps1  tasks.yaml  test_advanced.py  test_api.py  test_demo.py  uninstall.sh
api/: main.py
assets/: index-BQWSDu3-.js  index-BtL955Dv.css  index-C-pT6s4e.css  index-CjyhC9Qk.js  index-CmYc-t-g.js  index-CoqH8MJ0.css  index-CtP8oNX1.css  index-D-vtnTK4.js  index-DDADpxVx.css  index-rVnYI_PC.js
backends/: mock.py
core/: agent.py  agent_service.proto  api_engine.py  auth.py  config.py  context.py  custom_framework.py  exporter.py  fastapi_gateway.py  gateway.py  gateway_pro.py  intent.py  llm_gateway.py  mcp_server.py  network.py  omni_engine.py  orchestrator_pro.py  persona.py  plan.py  plugin_manager.py  queue.py  runtime.py  scraper.py  skill.py  skill_manager.py  token_tracker.py  trace.py  worker.py  workflow_manager.py
db/: models.py  session.py
docs/: API_EXTENSION_GUIDE.md  COMMANDS.md  CONFIG_EXAMPLES.md  FEATURES_GUIDE.md  LEARNING_GUIDE.md  OMNIGATE_GUIDE.md  OPENCLAW_SETUP.md  PRO_ARCHITECTURE.md
frontend/: index.html  package.json  tsconfig.tsbuildinfo  (+1 more)
(+68 files in other folders)
